--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["derive", "env"] }
+derive_builder = "0.20.0"
 phf = { version = "0.11.2", features = ["macros"] }
 serde = "1.0.197"
 serde_derive = "1.0.197"
