--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ derive_builder = "0.20.0"
 phf = { version = "0.11.2", features = ["macros"] }
 serde = "1.0.197"
 serde_derive = "1.0.197"
-strum = { version = "0.26.2", features = ["derive"] }
-strum_macros = "0.26.2"
+#strum = { version = "0.26.2", features = ["derive"] }
 thiserror = "1.0.58"
 toml = "0.8.12"
