--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,16 @@ resolver = "2"
 members = [
     "crates/cmd",
     "crates/subcommand",
-    "crates/toml",
+    "crates/hctoml",
 ]
 
 [workspace.package]
 authors = ["Michael Gardner <mjgardner@abitofhelp.com>"]
-description = "This is an example application using the latest versions of ..."
+description = "This project demonstrates how to implement hierarchical application configuration using Clap."
 edition = "2021"
 homepage = "https://www.abitofhelp.com"
-keywords = ["rust", "toml"]
+keywords = ["rust", "toml", "hierarchical-config", "config", "clap"]
 license-file = "LICENSE"
 readme = "README.md"
-repository = "https://github.com/abitofhelp/apis-rust.git"
+repository = "https://github.com/abitofhelp/rust_clap_hierarchical_config.git"
 rust-version = "1.79"
