--- a/crates/cmd/Cargo.toml
+++ b/crates/cmd/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "cmd"
-version = "1.0.0"
 authors.workspace = true
 description.workspace = true
 edition.workspace = true
 homepage.workspace = true
 keywords.workspace = true
 license-file.workspace = true
+name = "cmd"
 readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
+version = "0.1.2"
 
 [[bin]]
 bench = false
@@ -20,9 +20,9 @@ path = "src/main.rs"
 anyhow = "1.0.81"
 clap = { version = "4.5.4", features = ["derive", "env"] }
 derive_builder = "0.20.0"
+hctoml = { version = "0.1.2", path = "../hctoml" }
 serde = "1.0.197"
 serde_derive = "1.0.197"
-subcommand = { version = "1.0.0", path = "../subcommand" }
-hctoml = { version = "1.0.0", path = "../toml", package = "toml" }
-toml = { version = "0.8.12" }
+subcommand = { version = "0.1.2", path = "../subcommand" }
 thiserror = "1.0.59"
+toml = { version = "0.8.12" }
